--- a/public/esp-approach/index.html
+++ b/public/esp-approach/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.11ac97908c85ab19224e045daf6b3a3fa37d2e6844bdd846a8b6b51fd2bd42f9.css" integrity="sha256-EayXkIyFqxkiTgRdr2s6P6N9LmhEvdhGqLa1H9K9Qvk=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.f0be3cdf89396f0cf8844a988580847967ead86403d7cfeb3315d4ebc6670055.css" integrity="sha256-8L4834k5bwz4hEqYhYCEeWfq2GQD18/rMxXU68ZnAFU=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -38,7 +38,7 @@
 <body>
   
 
-<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top p-0">
+<nav class="navbar navbar-expand-md navbar-light fixed-top p-0">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0" href="/">
       <img src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
@@ -53,7 +53,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse bg-light pe-4" id="navbarNav">
+    <div class="collapse navbar-collapse pe-4" id="navbarNav">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
@@ -150,19 +150,15 @@
 
 
 
-
-
-
-
-
-
 <section class="esp-approach-section ">
   <div class="container">
     <h2 class="text-center text-white mb-0">ESP Approach</h2>
     <div class="row my-5">
       <div class="col-md-8 mx-auto">
         <p class="text-center text-light mb-0">
-          At ESPeople, we offer a comprehensive range of training and development methods designed to unlock the potential of individuals and teams. Our tailored programs enable personal and professional growth, empowering organizations to achieve their strategic goals through skilled, motivated, and aligned employees.
+          At ESPeople, we offer a comprehensive range of training and development methods designed to unlock the
+          potential of individuals and teams. Our tailored programs enable personal and professional growth, empowering
+          organizations to achieve their strategic goals through skilled, motivated, and aligned employees.
         </p>
       </div>
     </div>
@@ -176,7 +172,8 @@
           <div class="content">
             <h4 class="approach-title">People Developmental Learning (PDL)</h4>
             <p class="text-light">
-              Our PDL approach enhances capabilities, fosters growth, and aligns individual strengths with organizational goals.
+              Our PDL approach enhances capabilities, fosters growth, and aligns individual strengths with
+              organizational goals.
             </p>
             <ul class="key-benefits text-light">
               <li><strong>Skill Development:</strong> Empowers employees with essential skills.</li>
@@ -195,7 +192,8 @@
           <div class="content">
             <h4 class="approach-title">Rapid Training Delivery (RTD)</h4>
             <p class="text-light">
-              RTD is an accelerated method for quick, impactful learning using real-world examples and activity-based training.
+              RTD is an accelerated method for quick, impactful learning using real-world examples and activity-based
+              training.
             </p>
             <ul class="key-benefits text-light">
               <li><strong>Speed:</strong> High-impact learning in a condensed timeframe.</li>
@@ -214,7 +212,8 @@
           <div class="content">
             <h4 class="approach-title">L&D Coaching & Mentoring Services</h4>
             <p class="text-light">
-              Personalized guidance for employees at all levels, supporting their professional growth through tailored coaching plans.
+              Personalized guidance for employees at all levels, supporting their professional growth through tailored
+              coaching plans.
             </p>
             <ul class="key-benefits text-light">
               <li><strong>Personalized Growth Plans:</strong> Customized coaching for success.</li>
@@ -227,7 +226,6 @@
     </div>
   </div>
 </section>
-
 
 
 
@@ -263,6 +261,8 @@
             <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
             <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
             <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            
+             <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
             
              <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
         </div>
