--- a/temp.html
+++ b/temp.html
@@ -261,3 +261,89 @@
 
 
 
+<section class="contact-section py-5 d-none">
+  <div class="container">
+    <!-- Title -->
+    <h2 class="section-title text-center mb-4">Get in Touch to Unlock Your Business Potential.</h2>
+    <p class="text-center mb-5">Struggling with leadership, team synergy, or performance? <br> Our ESP (Energize &
+      Synergize
+      People) method helps businesses overcome these challenges. Reach out below and we'll partner with you to unlock
+      growth and success.</p>
+    <div class="row justify-content-between">
+      <!-- Contact Information Column -->
+      <div class="col-md-5 mb-4">
+        <h4>Contact Information</h4>
+        <h5>Address:</h5>
+        <p><strong>Main office:</strong></p>
+        <address>281 KH Road, Ayanavaram, Chennai 600023.</address>
+        <p><strong>Branch office:</strong></p>
+        <address>55/S2, 1st main road, venkataraman nagar, Chromepet, Chennai 600040</address>
+        <h5>Mobile #:</h5>
+        <a href="tel:+919962006364">+91 9962006364</a>
+        <h5>Email:</h5>
+        <a href="mailto:link2rmd@gmail.com">link2rmd@gmail.com</a>
+        <!-- Map Embed -->
+        <div class="map-container d-none" style="border-radius: 8px; overflow: hidden">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.194837259964!2d144.957412!3d-37.8172095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642b1b35c8d49%3A0x2f126ee80b2f95f1!2sMelbourne%20Central%20Shopping%20Centre!5e0!3m2!1sen!2sin!4v1604299245569!5m2!1sen!2sin"
+            width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0">
+          </iframe>
+        </div>
+      </div>
+      <!-- Form Column -->
+      <div class="col-md-6">
+        <form>
+          <!-- Name Input -->
+          <div class="form-floating mb-3">
+            <input type="text" class="form-control form-control-border" id="floatingName" placeholder="Your Name">
+            <label for="floatingName">Your Name</label>
+          </div>
+          <!-- Mobile Number Input -->
+          <div class="form-floating mb-3">
+            <input type="tel" class="form-control form-control-border" id="floatingMobile"
+              placeholder="Your Mobile Number">
+            <label for="floatingMobile">Your Mobile Number</label>
+          </div>
+          <!-- Email Input -->
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control form-control-border" id="floatingEmail"
+              placeholder="name@example.com">
+            <label for="floatingEmail">Email Address</label>
+          </div>
+          <!-- Subject Input -->
+          <div class="form-floating mb-3">
+            <input type="text" class="form-control form-control-border" id="floatingSubject" placeholder="Subject">
+            <label for="floatingSubject">Subject</label>
+          </div>
+          <!-- Message Input -->
+          <div class="form-floating mb-4">
+            <textarea class="form-control form-control-border" id="floatingMessage" placeholder="Your Message"
+              style="height: 150px;"></textarea>
+            <label for="floatingMessage">Your Message</label>
+          </div>
+          <!-- Submit Button -->
+          <div class="text-center">
+            <button type="submit" class="btn btn-secondary">Send Message</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- <footer class="text-center text-lg-start">
+    <div class="container p-4">
+      <section class="mb-4">
+        <p>Phone: +91-9962006364 | Email: link2rmd@gmail.com</p>
+        <p>© 2024 ESPeople. All rights reserved. Sketched with love by TenSketch</p>
+        <div>
+          <a href="#" class="me-3">Facebook</a>
+          <a href="#" class="me-3">Instagram</a>
+          <a href="#">LinkedIn</a>
+        </div>
+      </section>
+    </div>
+  </footer>
+   -->
