--- a/public/contact-us/index.html
+++ b/public/contact-us/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us"
   dir="ltr">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=45535&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=egde">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +14,10 @@
 
 <meta property="og:title" content="Contact Us | ESP | Energize, Synergize, People - Unlock Your Business Potential">
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://localhost:1313/">
+<meta property="og:url" content="http://localhost:45535/">
 <meta property="og:description" content="Reach out to ESPeople and let us help you unlock your business potential through our ESP method.">
 <meta property="og:keywords" content="[contact us, business growth, leadership, synergy, team performance, ESP]">
-<meta property="og:image" content="http://localhost:1313/ogimage.jpg">
+<meta property="og:image" content="http://localhost:45535/ogimage.jpg">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -39,12 +39,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-light fixed-top p-0">
   <div class="container px-md-0">
-    <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0 text-decoration-none" href="/">
-      <img class="d-block" src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
-      <div class="brand-name">
-        <h2 class="brand mb-0">ESPeople</h2>
-        <p class="tagline mb-0">TrainingSmiths</p>
-      </div>
+    <a class="navbar-brand" href="/">
+      <img class="" src="/images/ESPeople-logo.png" alt="ESPeople logo" title="ESPeople logo">
+      
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
