--- a/public/contact-us/index.html
+++ b/public/contact-us/index.html
@@ -29,7 +29,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-      <link rel="stylesheet" href="/scss/main.min.4f184369e2d46f12c25064b67bf48c26bac772284af931afce928b6f4b1356a0.css" integrity="sha256-TxhDaeLUbxLCUGS2e/SMJrrHcihK&#43;TGvzpKLb0sTVqA=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.2b43b1b942ed57ef22b83d7eee390fa87df79a9c9d2557c5b8098da987ec788c.css" integrity="sha256-K0OxuULtV&#43;8iuD1&#43;7jkPqH33mpydJVfFuAmNqYfseIw=" crossorigin="anonymous">
 
 
 </head>
@@ -157,7 +157,7 @@
     <div class="text-center  mb-5">
       <h1 class="display-5">Get in Touch to Unlock Your Business Potential</h1>
       <p class="fst-italic">
-        Reach out to ESPeople and let us help you unlock your business potential through our ESP method. 
+        Reach out to ESPeople and let us help you unlock your business potential through our ESP method.
       </p>
     </div>
     <div class="row">
