--- a/public/clientele-beneficiaries/esp-education/index.html
+++ b/public/clientele-beneficiaries/esp-education/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us"
   dir="ltr">
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=egde">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +14,10 @@
 
 <meta property="og:title" content="ESP Education | ESP | Energize, Synergize, People - Unlock Your Business Potential">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://espeople.in/">
+<meta property="og:url" content="http://localhost:1313/">
 <meta property="og:description" content="ESP (Energize, Synergize, People) helps businesses unlock their potential through innovative training, leadership development, and team-building solutions. Focused on enhancing organizational growth and performance through proven methods.">
 <meta property="og:keywords" content="business training, leadership development, team building, organizational growth, corporate training, ESP, Energize Synergize People, business consulting, performance improvement">
-<meta property="og:image" content="https://espeople.in/ogimage.jpg">
+<meta property="og:image" content="http://localhost:1313/ogimage.jpg">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -29,7 +29,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-      <link rel="stylesheet" href="/scss/main.min.e57df0de873df3057e3e09da0d8fa4c1217f3766f4cc023e033c5428ffe0f529.css" integrity="sha256-5X3w3oc98wV&#43;PgnaDY&#43;kwSF/N2b0zAI&#43;AzxUKP/g9Sk=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/scss/main.css">
 
 
 </head>
@@ -165,8 +165,8 @@
       </div>
       <div class="desc col-md-8 mt-4 mt-md-0">
         <h3 class="title mb-3 text-primary">RTT - Ready To Train</h3>
-        <h6 class="text fst-italic mb-4">Timely to deliver at ease.</h6>
-        <p>This RTT learning solutions for educational settings are crafted by collecting valuable inputs from professionals who are engaged in youth growth domains viz., academia, economists, developmental psychologists &amp; sociologists, etc. Such solutions are readily available, time-tested, matured, refined, and meet the growth dreams perspectives of educational settings.</p>
+        <h6 class="text fst-italic mb-4">Delivering timely at ease.</h6>
+        <p>This RTT learning solutions for educational settings are crafted by collecting valuable inputs from professionals who are engaged in youth growth domains viz., academia, economists, developmental psychologists &amp; sociologists. Such solutions are readily available, time-tested, matured, refined, and meet the growth dreams perspectives of educational settings.</p>
       </div>
     </div>
     
@@ -176,9 +176,9 @@
         <img src="/images/CTDD-4a.png" class="img-fluid" alt="CTDD Image" style="border-radius: 8px;">
       </div>
       <div class="desc col-md-8 mt-4 mt-md-0">
-        <h3 class="title mb-3 text-primary">CTDD - Customized Training Development &amp; Delivery</h3>
-        <h6 class="text fst-italic mb-4">Besides (RTT) readily available learning modules, an institution in the education setting may face some unique issues which may require tailor-made modules designed &amp; developed for their unique &amp; specific needs.</h6>
-        <p>CTDD - In certain situations, educational institutions require training solutions for their unique issues faced in the process of growth &amp; development which are student-centric, academic-related practices, or even Governmental specific directions. Thus, we study your unique needs, design, develop, implement &amp; fully deliver customized learning solutions to your educational settings. In such cases, our competent training needs assessment team will initiate a study to ascertain your apt needs. For that study, we will interact with your appropriate stakeholders and come with a roadmap to design, develop &amp; deliver learning solutions with start-to-end clarity.</p>
+        <h3 class="title mb-3 text-primary">CTDD - Customized Training Design &amp; Development</h3>
+        <h6 class="text fst-italic mb-4">Besides (RTT) readily available learning modules, an institution in the education setting may face some unique challenges which may require tailor-made modules designed &amp; developed for their unique &amp; specific needs.</h6>
+        <p>CTDD - In certain situations, educational institutions require training solutions for their unique challenges faced in the process of growth &amp; development which are student-centric, academic-related practices, or even Government specific directions. Thus, we study your unique needs, design, develop, implement &amp; fully deliver customized learning solutions to your educational settings. In such cases, our competent training needs assessment team will initiate a study to ascertain your apt needs. We will interact with your appropriate stakeholders and come with a roadmap to design, develop &amp; deliver learning solutions with start-to-end clarity.</p>
       </div>
     </div>
     
@@ -290,7 +290,7 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-      <script src="/js/main.3e3c036fa3deca22718d2df25dbbe31395819dde4e224912e0042a7b25d215b5.js" integrity="sha256-PjwDb6PeyiJxjS3yXbvjE5WBnd5OIkkS4AQqeyXSFbU=" crossorigin="anonymous"></script>
+      <script src="/js/main.js"></script>
 
 
 </body>
